<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.struts</groupId>
  <artifactId>struts2</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>struts2 Maven Webapp</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!--servlet-->
    <servlet.api.version>3.0.1</servlet.api.version>
    <servlet.version>1.2</servlet.version>
    <!--Struts-->
    <struts.version>2.3.16.3</struts.version>
    <!--Hibernate-->
    <hibernate.version>4.3.8.Final</hibernate.version>
    <hibernate.annotation>4.0.5.Final</hibernate.annotation>
    <!--MySQL-->
    <mysql.version>5.1.34</mysql.version>
    <!--JUnit-->
    <junit.version>4.11</junit.version>
    <!--compiler-->
    <compile.version>1.7</compile.version>
    <jdk.version>1.7</jdk.version>
    <plugin.compiler.version>3.1</plugin.compiler.version>
    <!--plugin Mavin-->
    <maven.plugin.version>2.7</maven.plugin.version>
    <maven.filter.version>1.3</maven.filter.version>
    <maven.pmd.version>3.5</maven.pmd.version>
    <!--plugin Tomcat-->
    <tomcat.plugin.version>2.2</tomcat.plugin.version>

  </properties>

  <dependencies>
    <!--servlet-->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>${servlet.api.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>${servlet.version}</version>
    </dependency>
    <!--Struts-->
    <dependency>
      <groupId>org.apache.struts</groupId>
      <artifactId>struts2-core</artifactId>
      <version>${struts.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.struts</groupId>
      <artifactId>struts2-tiles-plugin</artifactId>
      <version>${struts.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.struts</groupId>
      <artifactId>struts2-convention-plugin</artifactId>
      <version>${struts.version}</version>
    </dependency>
    <!--Hibernate-->
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate.common</groupId>
      <artifactId>hibernate-commons-annotations</artifactId>
      <version>${hibernate.annotation}</version>
    </dependency>
    <!--MySQL-->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>${mysql.version}</version>
    </dependency>
    <!--JUnit-->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.name}</finalName>
    <plugins>
      <!--resources-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven.plugin.version}</version>
        <configuration>
          <!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
          <encoding>UTF-8</encoding>
          <nonFilteredFileExtensions>
            <nonFilteredFileExtension>xls</nonFilteredFileExtension>
            <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
            <nonFilteredFileExtension>jrxml</nonFilteredFileExtension>
            <nonFilteredFileExtension>jasper</nonFilteredFileExtension>
          </nonFilteredFileExtensions>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-filtering</artifactId>
            <version>${maven.filter.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <!--compiler-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${plugin.compiler.version}</version>
        <configuration>
          <source>${compile.version}</source>
          <target>${compile.version}</target>
        </configuration>
      </plugin>
      <!--Tomcat-->
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>${tomcat.plugin.version}</version>
        <configuration>
          <path>/${project.build.finalName}</path>
          <!--<contextReloadable>true</contextReloadable>-->
          <!--<backgroundProcessorDelay>10</backgroundProcessorDelay>-->
          <systemProperties>
            <JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xnoagent
              -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000
            </JAVA_OPTS>
          </systemProperties>
          <contextReloadable>true</contextReloadable>
        </configuration>
      </plugin>
      <!--PMD-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>${maven.pmd.version}</version>
        <configuration>
          <!--<linkXref>true</linkXref>-->
          <sourceEncoding>utf-8</sourceEncoding>
          <minimumTokens>100</minimumTokens>
          <targetJdk>${jdk.version}</targetJdk>
          <excludes>
            <exclude>**/*Bean.java</exclude>
            <exclude>**/generated/*.java</exclude>
          </excludes>
          <excludeRoots>
            <excludeRoot>target/generated-sources/stubs</excludeRoot>
          </excludeRoots>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
